--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         <meta name="description" content="Class" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="icon" href="assets/favicon/favicon.png" type="image/jpg" />
-        <!-- <link rel="stylesheet" href=""> -->
     </head>
     <body>
         <h1>Clase de HTML</h1>
@@ -19,6 +18,8 @@
         </p> -->
 
         <!-- <h2>Esto es Desafío Latam!</h2> -->
+
+        <!-- <img src="assets/img/pizzas.jpg" alt="imagen de un restaurant" /> -->
 
         <!-- <img
             src="https://i.ibb.co/HpzRt06/best-pizza-facade.jpg"
