--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="icon" href="assets/favicon/favicon.png" type="image/jpg" />
     </head>
     <body>
-        <h1>Clase de HTML</h1>
+        <!-- <h1>Clase de HTML</h1> -->
         <!-- <p>
             Antiguamente la universidad era el único lugar de calidad para
             aprender a desarrollar tus talentos. Con eso bastaba. Hoy no es así,
@@ -18,6 +18,10 @@
         </p> -->
 
         <!-- <h2>Esto es Desafío Latam!</h2> -->
+
+        <!-- <h3>Esto es Desafío Latam!</h3> -->
+
+        <!-- <h5>Esto es Desafío Latam!</h5> -->
 
         <!-- <img src="assets/img/pizzas.jpg" alt="imagen de un restaurant" /> -->
 
